--- a/index.html
+++ b/index.html
@@ -7,49 +7,46 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 20px;
+            background-color: #f8f8f8;
+            margin: 20px;
         }
-        h1 {
-            color: #333;
+        table {
+            width: 100%;
+            border-collapse: collapse;
         }
-        .file-list {
-            list-style-type: none;
-            padding: 0;
+        th, td {
+            padding: 8px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
         }
-        .file-list li {
-            background-color: #fff;
-            margin: 5px 0;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
+        th {
+            background-color: #f2f2f2;
         }
-        .file-list li a {
+        a {
             text-decoration: none;
-            color: #1a73e8;
-        }
-        .file-list li a:hover {
-            text-decoration: underline;
-        }
-        footer {
-            text-align: center;
-            margin-top: 20px;
-            font-size: 14px;
-            color: #888;
+            color: #007BFF;
         }
     </style>
 </head>
 <body>
     <h1>Index of /</h1>
-    <ul class="file-list">
-        <li><a href="https://www.naver.com" target="_blank">네이버</a></li>
-        <li><a href="file1.html">file1.html</a></li>
-        <li><a href="file2.html">file2.html</a></li>
-        <li><a href="file3.html">file3.html</a></li>
-    </ul>
-    <footer>
-        <p>&copy; 2024 Your Website</p>
-    </footer>
+    <table>
+        <tr>
+            <th>File Name</th>
+            <th>Size</th>
+            <th>Last Modified</th>
+        </tr>
+        <tr>
+            <td><a href="file1.html">file1.html</a></td>
+            <td>1.2 KB</td>
+            <td>Nov 29, 2024</td>
+        </tr>
+        <tr>
+            <td><a href="file2.html">file2.html</a></td>
+            <td>2.3 KB</td>
+            <td>Nov 30, 2024</td>
+        </tr>
+    </table>
 </body>
 </html>
+
