--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <label for="username">아이디</label>
             <input type="text" id="username" name="username" placeholder="아이디를 입력하세요" required>
             
-            <label for="password">Lsj147214!</label>
+            <label for="password">password</label>
             <input type="password" id="password" name="password" placeholder="비밀번호를 입력하세요" required>
             
             <button type="submit">로그인</button>
